--- a/imagenes/Base.lproj/Main.storyboard
+++ b/imagenes/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="imagenes" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,33 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="perro" translatesAutoresizingMaskIntoConstraints="NO" id="3QL-RN-vrf">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="334"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="perro" translatesAutoresizingMaskIntoConstraints="NO" id="SVM-dk-8ZM">
+                                <rect key="frame" x="0.0" y="334" width="375" height="333"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3QL-RN-vrf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1wk-F0-749"/>
+                            <constraint firstItem="SVM-dk-8ZM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4qH-NO-gvd"/>
+                            <constraint firstItem="3QL-RN-vrf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DB9-kL-J3a"/>
+                            <constraint firstItem="3QL-RN-vrf" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="Ddo-ig-x78"/>
+                            <constraint firstAttribute="trailing" secondItem="3QL-RN-vrf" secondAttribute="trailing" id="TrO-Hk-XFd"/>
+                            <constraint firstAttribute="trailing" secondItem="SVM-dk-8ZM" secondAttribute="trailing" id="YSl-Ro-V10"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SVM-dk-8ZM" secondAttribute="bottom" id="efg-yd-W5K"/>
+                            <constraint firstItem="SVM-dk-8ZM" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="yot-tH-jkW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="perro" width="533" height="354"/>
+    </resources>
 </document>
